theme/scss/site/layout.scss
// General structure

body {
	overflow-x: hidden;  // stop full width elements overflowing
}

.alignfull {
	position: relative;
	right: 0px; // Fallback
	right: calc((100vw - 100%)/2);
	width: 100vw;
	max-width: 100vw;
	clear: both;
}

.alignwide {
	position: relative;
	right: 2.375em;
	width: 100vw;
	max-width: 100vw;
	clear: both;
}

@include media-breakpoint-up(md) {
	.alignwide {
		width: calc( 100% );
		right: 0px;
	}
}

@include media-breakpoint-up(xl) {
	.alignwide {
		width: calc( 100% + (2 * 2rem));
		right: 2rem;
	}
}

@include media-breakpoint-up(xxl) {
	.alignwide {
		width: calc( 100% + (2 * 3rem));
		right: 3rem;
	}
}


// blog post page cards has differnt settings for align wide and full
.card {
	.alignfull,
	.alignwide {
		width: 100%;
		margin-left: 0px;
		margin-right: 0px;
		right: 0 !important;
	}
}

